config/validations/upgrade-admissionpolicy.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "patronipostgres-upgrade"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["kwebs.cloud"]
      apiVersions: ["v1alpha1"]
      operations:  ["UPDATE"]
      resources:   ["patronipostgres"]
      scope:       Namespaced
  validations:
    - expression: |-
        has(object.status) && (
          object.spec.version == object.status.version
            ||
          (has(object.status.upgradeVersions) && object.spec.version in object.status.upgradeVersions)
        )
      message: "Selected version not supported"
