config/validations/upgrade-admissionpolicybinding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "patronipostgres-upgrade"
spec:
  policyName: "patronipostgres-upgrade"
  validationActions: [Deny]
